add sections about accessibility and CoC coordination

--- a/public/code-of-conduct/index.html
+++ b/public/code-of-conduct/index.html
@@ -110,11 +110,15 @@
 <br><br>
 <b>Be excellent and inclusive to everyone:</b>   Pass the Salt is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, sexual orientation, disability, physical appearance, body size, race, age, or religion. We do not tolerate harassment of conference participants in any form. Participants asked to stop any harassing behavior are expected to comply immediately.
 <br><br>
-<b>Consider what you share: </b> All communication should be appropriate for an audience including people of many different backgrounds. Sexual language and imagery is not appropriate for any conference venue, including talks.
+<b>Consider what you share: </b> all communication should be appropriate for an audience including people of many different backgrounds. Sexual language and imagery is not appropriate for any conference venue, including talks.
 <br><br>
-<b>In case of problem, contact Pass the SALT crew members (we&rsquo;ll be wearing specific t-shirts).</b> Organizers will enforce this code throughout the event. Conference participants violating these rules may be sanctioned or expelled from the conference at the discretion of the conference organizers.<br>
-<br><br>
-<b>Thank you</b> for helping make this a welcoming, friendly event for all.</p>
+<strong>In case of problem :</strong></p>
+<ul>
+<li>you can contact Pass the SALT crew members (we&rsquo;ll be wearing specific t-shirts).</li>
+<li><strong>New 2025:</strong> a person will coordinate the application of this code of conduct and will be your main point of contact. His or her name will be announced during the opening conference.</li>
+</ul>
+<p><strong>Conference reaction:</strong> participants violating these rules may be sanctioned or expelled from the conference at the discretion of the conference organizers.<br></p>
+<p><b>Thank you</b> for helping make this a welcoming, friendly event for all.</p>
 
         </div>
       </div>
