--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -106,7 +106,7 @@
       </div>
       <div class="col-lg-10 mb-5">
         <div class="content">
-          <p><a href="#conference-location">How to come</a> | <a href="#registration"> Registration</a> | <a href="#social-event"> Social event</a> | <a href="#pauses"> Pauses </a> | <a href="#mid-day-lunchs"> Lunchs</a>
+          <p><a href="#conference-location">Location &amp; accessibility</a> | <a href="#coming-to-the-conference-location-from-lille-stations-area">How to come</a> | <a href="#registration"> Registration</a> | <a href="#social-event"> Social event</a> | <a href="#pauses"> Pauses </a> | <a href="#mid-day-lunchs"> Lunchs</a>
 <br><br></p>
 <p><strong>NEW in 2025:</strong> we are very pleased and honoured to announce that the 2025 edition of Pass the SALT conference will be held on the <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
 <p><img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/> <br></p>
@@ -123,6 +123,7 @@
 </ul>
 </li>
 <li><strong>Maps:</strong> <a href="https://maps.app.goo.gl/J2uYiRaoKP7VmMSk8" >Google Maps</a> | <a href="https://osm.org/go/0EgIjC2uR" >Openstreetmap</a> <br></li>
+<li><strong>Persons with reduced mobility:</strong> the event is accessible but the entrance requires the presence of a staff member. The number to request assistance will be displayed at the entrance. The access to the workshops rooms from the main lecture hall will be done through a lift usable with a staff member.</li>
 </ul>
 <h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
 <p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br>
