--- a/public/code-of-conduct/index.html
+++ b/public/code-of-conduct/index.html
@@ -115,7 +115,7 @@
 <strong>In case of problem :</strong></p>
 <ul>
 <li>you can contact Pass the SALT crew members (we&rsquo;ll be wearing specific t-shirts).</li>
-<li><strong>New 2025:</strong> a person will coordinate the application of this code of conduct and will be your main point of contact. Their name will be announced during the opening conference and they will wear a distinctif sign to be recognised.</li>
+<li><strong>New 2025:</strong> a person will coordinate the application of this code of conduct and will be your main point of contact. Their name will be announced during the opening conference and they will wear a distinctive sign to be recognised.</li>
 </ul>
 <p><strong>Conference reaction:</strong> participants violating these rules may be sanctioned or expelled from the conference at the discretion of the conference organizers.<br></p>
 <p><b>Thank you</b> for helping make this a welcoming, friendly event for all.</p>
