--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -111,7 +111,9 @@
 <p><strong>IMPORTANT:</strong> <strong>all other practical information</strong> (conference location, how to come, registration, eat/drink/social event &hellip;) are located on the <a href="/practical/">general practical info page</a>.<br><br></p>
 <h1 id="speakers-dinner">Speakers dinner</h1>
 <p>On Tuesday July 1 evening, we will have a dinner with all the speakers who have accepted to come and the org team.<br><br></p>
-<p>The meeting point will be in front of the Lille Flandres Station main entrance in order to go together to the restaurant leaving at 7:00PM/19h00:<br></p>
+<p>This year, it will take place on Tuesday July 1 at 19h30/07:30PM at the first floor of <strong>LA LUCK restaurant in the center of Lille (1 bis rue Princesse 59800 Lille)</strong>.<br>
+<img src="/images/first-floor.png" alt="first floor restaurant" width="50%"/> <br></p>
+<p>The <strong>meeting point will be in front of the Lille Flandres Station</strong> main entrance (yellow statue) in order to go together to the restaurant <strong>leaving at 19h00/7:00PM</strong>. Of course, you can join us directly at the restaurant from 19h30/7:30PM. <br></p>
 <p><img src="/images/meeting-point.jpg" alt="meeting-point" width="50%"/> <br></p>
 <p>The dinner will be paid by the event, with a package for the drinks.<br><br></p>
 <h1 id="hotels">Hotels</h1>
@@ -138,7 +140,7 @@
 <br><br></p>
 <p><strong>Code of Conduct:</strong> Pass the SALT has a <a href="/code-of-conduct/">code of conduct</a> for attendees and for speakers too, obviously. Your words and your slides will have to follow it without exception. Thanks in advance!
 <br><br></p>
-<p><strong>Logo:</strong> you can use our logo on your speaker deck. The correct source for it is in this <a href="https://github.com/pass-the-salt/2024-communication/tree/main/logo/">repository</a>.
+<p><strong>Logo:</strong> you can use our logo on your speaker deck. The correct source for it is in this <a href="https://github.com/pass-the-salt/2025-communication/tree/main/logo/">repository</a>.
 <br><br></p>
 <p><strong>IMPORTANT send us your speaker deck:</strong> we will greatly appreciate if you can provide your slides before your talk or just after it. We try to provide them to all attendees (on-site and online ones) as soon as possible on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.
 <br><br></p>
