add details for social event

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -196,10 +196,9 @@
 </ul>
 <h2 id="social-event">Social event</h2>
 <ul>
-<li>We will communicate during the event the social event location.</li>
-<li>It will be held during Wednesday July 2 evening.</li>
+<li>It will be held at the bar <em>&ldquo;Les 3 brasseurs&rdquo;</em> near the Lille Flandres Station exit on <strong>Wednesday July 2 evening, starting at 19h30/07:30PM</strong>. <a href="https://maps.app.goo.gl/KCbVGLYB5fcmgBKu9">Map</a>.</li>
 <li>To access, your badge will be required.</li>
-<li><strong>Important:</strong> the first 2 drinks are paid by the event with usually some light food. The rest of the food/beers/softs will be at your charge ;)</li>
+<li><strong>Important:</strong> you will be able to get 2 free drinks <strong>using the 2 coins</strong> you have received getting your badge. The event usually paid also  for <em>some</em> light food. The rest of the food/beers/softs will be at your charge ;)</li>
 </ul>
 <!--
 **For lunch:** <br>
