change img display ratio on speakers and practical pages

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -111,7 +111,7 @@
 <p><strong>NEW in 2025:</strong> we are very pleased and honoured to announce that the 2025 edition of Pass the SALT conference will be held on the <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
 <p><img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/> <br></p>
 <h2 id="conference-location">Conference location</h2>
-<p><img src="/images/university-entrance.jpg" alt="Entrance of the Université catholique de Lille" width="50%"/> <br></p>
+<p><img src="/images/university-entrance.jpg" alt="Entrance of the Université catholique de Lille" width="90%"/> <br></p>
 <ul>
 <li><strong>Address:</strong> <a href="https://www.univ-catholille.fr/en/">Université Catholique de Lille </a>:
 83 Bd Vauban, 59800 Lille<br /></li>
@@ -126,16 +126,16 @@
 <li><strong>Persons with reduced mobility:</strong> the event is accessible but the entrance requires the presence of a staff member. The number to request assistance will be displayed at the entrance. The access to the workshops rooms from the main lecture hall will be done through a lift usable with a staff member.</li>
 </ul>
 <h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
-<p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br>
+<p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="90%"/> <br>
 <em>How to reach the L5 bus stop at Gare Lille Flandres</em></p>
-<p>You have <strong>three main options</strong> :</p>
+<p>You have <strong><u>3</u> main options</strong> :</p>
 <ol>
 <li><strong>Bus: take line L5</strong> (every ~10min)</li>
 </ol>
 <ul>
 <li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>. From the Lille Flandres station exit: 150m on your right. From the Lille Europe station exit: 300m in direction to the center of Lille.</li>
 <li><strong>Direction:</strong> <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 5min journey</strong>.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop and <strong>then a 5min walk to the 83 Boulevard Vauban</strong>.</li>
 <li><strong>Total duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
@@ -145,7 +145,7 @@
 <ul>
 <li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> station</li>
 <li><strong>Direction:</strong> <em>&ldquo;Lille Chu Eurasanté&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Gambetta&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 13min journey</strong>.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Gambetta&rdquo;</em> stop and <strong>then a 13min walk to the 83 Boulevard Vauban</strong>.</li>
 <li><strong>Total duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
@@ -155,7 +155,7 @@
 <ul>
 <li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> or <em>&ldquo;Lille Europe&rdquo;</em> stations</li>
 <li><strong>Direction:</strong> <em>&ldquo;Lomme St. Philibert&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Cormontaigne&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 10min journey</strong>.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Cormontaigne&rdquo;</em> stop and <strong>then a 10min walk to the 83 Boulevard Vauban</strong>.</li>
 <li><strong>Total duration:</strong> ~20min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
